--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8478,8 +8478,8 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #3CB0FC;
+  border-color: #3CB0FC;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
