--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -854,8 +854,8 @@ header .col-md-6 {
 .logo {
     float: left;
     width: 160px;
-    height: 120px;
-    background: url(../img/gri.png) no-repeat center;
+    height: 110px;
+    background: url(../img/loggo.png) no-repeat center;
     position: absolute;
     z-index: 6;
     -webkit-transition: background-size 0.5s ease-in-out, height 0.5s ease-in-out;
