--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7472,9 +7472,7 @@ caption {
   text-align: left;
 }
 
-th {
-  text-align: left;
-}
+
 
 .tablepo {
   width: 50%;
@@ -8505,22 +8503,22 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #286090;
+  background-color: #3CB0FC;
   border-color: #122b40;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #286090;
+  background-color: #3CB0FC;
   border-color: #204d74;
 }
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #286090;
+  background-color: #3CB0FC;
   border-color: #204d74;
 }
 .btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus, .open > .btn-primary.dropdown-toggle:hover, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle.focus {
   color: #fff;
-  background-color: #204d74;
+  background-color: #3CB0FC;
   border-color: #122b40;
 }
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
