mobil uyumluluk ayarları
css ve içerikler mobile uygun düzenlendi

--- a/assets/css/style-1200.css
+++ b/assets/css/style-1200.css
@@ -93,7 +93,7 @@ header .right {
     display: none;
 }
 .cozum-list {
-    margin: 0 0 20px;
+    margin: 20px 0 0;
 }
 .cozum-list .col a {
     padding: 10px;
