--- a/assets/css/style-560.css
+++ b/assets/css/style-560.css
@@ -321,7 +321,8 @@ footer {
     overflow: hidden;
 }
 .fiyat-tab ul li input[type=radio] + label {
-    padding: 14px;
+    padding: 12px;
+    width: 100%;
 }
 
 .fiyat-sol {
@@ -348,4 +349,27 @@ footer {
 }
 .fiyat-sag {
     height: auto;
+}
+
+.fiyat-tab ul li {
+    float: left;
+    width: 100%;
+}
+
+#bosAciklama1 {
+    padding: 30px 8px 60px 8px;
+    font-size: 14px;
+    color: #3c3c3c;
+    font-weight: 600;
+    border-bottom: 1px solid #e1e1e1;
+}
+.fiyat-aciklama {
+    padding: 15px 0px 30px 0;
+    font-size: 14px;
+}
+
+.slider-img img {
+    width: auto;
+    height: 180px;
+    float: right;
 }
