--- a/assets/css/flapper.css
+++ b/assets/css/flapper.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300);
 
 /* STRUCTURAL STYLES */
 
