görsel hata düzeltildi
css içerisindeki background color nedeniyle ortaya çıkan görsel hata düzeltildi.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2476,7 +2476,7 @@ form .row .col .resecurity {
 }
 
 #neden {
-    background: #f8f8f8;
+    background: #ffffff;
     padding: 40px 0;
     margin: 40px 0;
 }
