--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2314,6 +2314,7 @@ form .row .col .resecurity {
     top: 0;
     width: 100%;
     height: 100%;
+    background-color: #e6eaed
 }
 
 .page-image:before {
